Update tampilan kartu profil

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   </head>
   <body>
     <div class="card">
+      <img src="profile.jpeg" alt="Foto Bintang" class="profile-img" />
       <h2>BINTANG</h2>
       <p id="text">Calon Front End Developer</p>
       <button>Lihat Status</button>
