Update portofolio frontend

--- a/index.html
+++ b/index.html
@@ -3,15 +3,36 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Belajar Front End - Bintang</title>
+    <title>Bintang | Frontend Developer</title>
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <div class="card">
-      <img src="profile.jpeg" alt="Foto Bintang" class="profile-img" />
-      <h2>BINTANG</h2>
-      <p id="text">Calon Front End Developer</p>
-      <button>Lihat Status</button>
+      <button id="toggle-theme">Dark Mode</button>
+
+      <img src="profile.jpeg" alt="profile" class="avatar" />
+
+      <h1>Bintang</h1>
+      <p class="role">Frontend Developer</p>
+
+      <p class="description">
+        Frontend Developer pemula yang fokus membangun tampilan web yang rapi,
+        responsif, dan mudah digunakan.
+      </p>
+
+      <h2>Skills</h2>
+      <div class="skills">
+        <span>HTML</span>
+        <span>CSS</span>
+        <span>JavaScript</span>
+      </div>
+
+      <h2>Projects</h2>
+      <ul class="projects">
+        <li>Simple Portofolio Website</li>
+        <li>Dark Mode Toggle UI</li>
+        <li>Basic DOM Interaction</li>
+      </ul>
     </div>
     <script src="script.js"></script>
   </body>
