Add profesional To-Do List project

--- a/index.html
+++ b/index.html
@@ -32,6 +32,11 @@
         <li>Simple Portofolio Website</li>
         <li>Dark Mode Toggle UI</li>
         <li>Basic DOM Interaction</li>
+        <li>
+          <a href="todo/index.html" target="_blank">
+            To-Do List App (JavaScript + localStorage)
+          </a>
+        </li>
       </ul>
     </div>
     <script src="script.js"></script>
