Add Weather App Project

--- a/index.html
+++ b/index.html
@@ -66,6 +66,15 @@
             >Counter App (JavaScript + localStorage)</a
           >
         </li>
+        <li>
+          <a
+            href="weather/index.html"
+            target="_blank"
+            class="text-blue-600 dark:text-blue-400 hover:underline"
+          >
+            Weather App (JavaScript + Fetch)
+          </a>
+        </li>
       </ul>
     </div>
 
